--- a/CSS/stles.css
+++ b/CSS/stles.css
@@ -509,6 +509,39 @@ h1{
   font-size : 2rem;
 }
 
+.drumKit-container{
+  display: flex;
+  justify-content: space-around;
+  flex-flow: row wrap;
+  align-items: center;
+  margin: 10% 0%;
+}
+
+.drum{
+  width: 150px;
+  height: 150px;
+  border: solid 10px var(--game-title-color);
+  line-height: 2;
+  font-weight: 900;
+  font-family: var(--font-family-vintage-game);
+  border-radius: 15px;
+  color: var(--game-title-color);
+  text-shadow: 3px 0 #DBEDF3;
+  margin: 10px;
+  text-align: center;
+  font-size: xx-large;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 3rem;
+}
+
+.drum-pressed {
+  box-shadow: 0 3px 4px 0 #DBEDF3;
+  opacity: 0.5;
+}
+
+
 
 /*
 usefull link
